<resources>
    <string name="app_name">Super List</string>
    <string name="create_list">Create list</string>
    <string name="list_title">list title</string>
    <string name="app_slogan">Your last list</string>
    <string name="delete">Delete</string>
    <string name="todo_title">Todo title</string>
    <string name="create_todo">Create todo</string>
    <string name="back">Back</string>
    <string name="rename_text">Rename</string>
</resources>