<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoDetailsActivity"
    android:paddingStart="18dp"
    android:paddingEnd="18dp"
    android:paddingTop="18dp"
    android:paddingBottom="18dp">

    <Button
        android:id="@+id/button_details_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pb_details_progress"
        />

    <EditText
        android:id="@+id/et_todo_list_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_rename_list"
        android:textSize="25sp"
        android:autofillHints="rename"
        android:inputType="text" />

    <Button
        android:id="@+id/button_rename_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/button_details_back"
        app:layout_constraintTop_toTopOf="@id/button_details_back"
        android:text="@string/rename_text"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        />

    <ProgressBar
        android:id="@+id/pb_details_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:scaleY="2"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_todo_list_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_create_todo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:srcCompat="@android:drawable/ic_input_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/create_todo" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_details_list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pb_details_progress"
        app:layout_constraintBottom_toTopOf="@id/et_details_todo_title"
        />

    <EditText
        android:id="@+id/et_details_todo_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/todo_title"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_create_todo"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>