<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TodoListsActivity"
    android:padding="18dp">

    <TextView
        android:id="@+id/tv_main_title"
        android:paddingTop="18dp"
        android:paddingBottom="18dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_main_slogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="18dp"
        android:text="@string/app_slogan"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_main_title" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_create_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:srcCompat="@android:drawable/ic_input_add"
        tools:layout_editor_absoluteX="335dp"
        tools:layout_editor_absoluteY="654dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/create_list" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_slogan"
        app:layout_constraintBottom_toTopOf="@id/et_list_title"
        />

    <EditText
        android:id="@+id/et_list_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/list_title"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_create_list"
        android:autofillHints="list name" />

</androidx.constraintlayout.widget.ConstraintLayout>